--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -10,6 +10,40 @@
     }
   },
   "AllowedHosts": "*",
+
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}{NewLine}"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source=DESKTOP-L558MLK;Initial Catalog=FirstProject;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False;MultipleActiveResultSets=True",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "ECommerce"
+    }
+  },
+
   "EmailSettings": {
     "Port": 587,
     "Host": "smtp.gmail.com",
